# radio-optical-transients-plot

./: LICENSE  README.md  pyproject.toml
examples/: ro_notebook_example.ipynb
radio_optical_transients_plot/: ro_main.py  ro_plotting.py  ro_utils.py
radio_optical_transients_plot/data/: GRB_redshifts.txt  Master_Table_27042018.tsv  Stripe82_QSOs.txt  stellar_distances.csv
radio_optical_transients_plot/data/dynamic_tracks/: CV_RSOph_6.0_V_45days.txt  CV_SSCyg_8.6_V_15days.txt  CV_TPyx_5_V_445days.txt  CV_V1500Cyg_8.1_V_373days.txt  CV_V1974Cyg_5.0_V_862days.txt  GRB_000301C_8.46_R_43days.txt  GRB_030329_8.64_R_65days.txt  GRB_050820A_8.46_R_25days.txt  GRB_060218_8.46_R_23days.txt  GRB_070125_8.46_R_18days.txt  GRB_100418A_8.46_R_31days.txt  GRB_970508_8.46_R_82days.txt  GRB_991208_8.46_R_37days.txt  Quasar_3C454_8GHz.txt  Quasar_BLLac_5GHz-3month.txt  Quasar_BLLac_5GHz.txt  SN_1990B_5.0_V_105days.txt  SN_1993J_8.3_R_305days.txt  SN_1994I_8.3_R_127days.txt  SN_1998bw_8.64_R_77days.txt  SN_2002ap_1.43_R_17days.txt  SN_2004dj_5.0_V_110days.txt  SN_2004dk_8.5_R_41days.txt  SN_2004et_5.0_R_57days.txt  SN_2004gq_8.5_R_35days.txt  SN_2007bg_8.46_R_68days.txt  SN_2007gr_4.9_R_92days.txt  SN_2007uy_8.4_R_56days.txt  SN_2008D_4.8_R_115days.txt  SN_2008ax_8.46_V_46days.txt  SN_2009bb_8.46_V_44days.txt  XRB_GROJ0422+32_5.0_V_155days.txt  XRB_GS1124-684_4.7_R_13days.txt  XRB_GX339_4_9GHz_80days.txt  XRB_J1655402005_4.86_V_45days.txt  XRB_V404_8_3GHz_35days.txt  XRB_XTEJ0421+560_8.0_R_17days.txt  XRB_XTEJ1550-564_4.8_V_9days.txt  (+1 more)
tests/: test_radio_optical_transients_plot.py
