[tool.poetry]
name = "radio-optical-transients-plot"
version = "0.1.0"
description = ""
authors = ["Adam Stewart <adam.stewart@sydney.edu.au>"]
include = ["radio_optical_transients_plot/data",]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
astropy = "^4.2.1"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.16"

[tool.poetry.scripts]
radio_optical_figures = "radio_optical_transients_plot.bin.radio_optical_figures:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
